Update and rename 2018-2-7-小程序多图上传的优化解决方案md to 2018-2-7-小程序多图上传的优化解决方案.md

--- a/_posts/2018-2-7-小程序多图上传的优化解决方案.md
+++ b/_posts/2018-2-7-小程序多图上传的优化解决方案.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      解决、优化微信小程序多图上传的若干问题
+title:      小程序多图上传的优化解决方案
 subtitle:   根据我实际开发的经验造了一个多图上传的轮子，可直接拿来复用
 date:       2018-02-07
 author:     陈剑
