Update and rename 2018-2-20-自适应和移动辅助削减二进制能量对偶.md to 2018-2-20-自适应和移动辅助削减二进制能量对偶相关概念整理.md

--- a/_posts/2018-2-20-自适应和移动辅助削减二进制能量对偶相关概念整理.md
+++ b/_posts/2018-2-20-自适应和移动辅助削减二进制能量对偶相关概念整理.md
@@ -11,15 +11,17 @@ tags:
     - 二进制
 ---
 
+下面的概念是对《Adaptive and Move Making Auxiliary Cuts for Binary Pairwise Energies》这篇发表于CVPR2017上的论文的知识点的总结，可能是看错论文了，这篇论文看的比较费劲，慢慢理解着随时更新吧。
+
 # 基本概念
 
-对偶：本人姑且简单理解为映射、等价。
+1.对偶：本人姑且简单理解为映射、等价。
 
 在数学中，对偶一般来说是以一对一的方式，常常（但并不总是）通过某个对合算子，把一种概念、公理或数学结构转化为另一种概念、公理或数学结构：如果A的对偶是B，那么B的对偶是A。由于对合有时候会存在不动点，因此A的对偶有时候会是A自身。
   
 两类对象之间的对偶很多都和配对（pairing）相对应，也就是把一类对象和另一类对象映射到某一族标量上的双线性函数相对应。
     
-组合优化：组合优化组合（最）优化问题是最优化问题的一类。
+2.组合优化：组合优化组合（最）优化问题是最优化问题的一类。
 
 最优化问题自然地分成两类：
     
@@ -34,3 +36,11 @@ tags:
     一个组合最优化问题可用二元组(F，c)表示，其中F表示可行解区域，F中的任何一个元素称为该问题的可行解，c表示目标函数。满足
 ![](https://gss2.bdstatic.com/-fo3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D169/sign=07ac44c888025aafd7327acdc2ecab8d/a08b87d6277f9e2fd1b71f001530e924b899f33c.jpg)
     的可行解， f*称为该问题的最优解。
+    
+3.次模函数
+
+次模函数是解析函数（可惜把区域上处处可微的函数称为单演函数，后人称之为全纯函数、解析函数）上的概念。
+次模函数的定义：
+{对于一个集合函数f:2V→R+,若A⊆V,B⊆A且∃e∈V−A,s.t.f({e}∪A)−f(A)⩽f({e}∪B)−f(B),那么f(x)就是次模函数(Submodular Function)，也称子模函数或亚模函数. 
+说明：次模函数用来描述边缘效益递减现象(Diminishing Marginal Return)，边缘效益递减现象广泛存在于现实世界中。举个例子：施肥，农民给作物施肥，开始时的施一定量的肥料可以产生效益：作物成长。以后每施一定量的肥料，作物就会生长一定的量，但是不能没有节制的生长，因此，当农民施到某一次肥料时，作物不再按照原先的长势生长，反而会逆势生长，这种现象就是边缘效益递减现象。（若函数二阶可导，那么边缘收益递减现象就是二阶导数小于零的意思。可以通俗地这么理解。）}
+---摘自![http://blog.csdn.net/chixuezhihun/article/details/54800338](http://blog.csdn.net/chixuezhihun/article/details/54800338)
